# Patest

./: CHANGELOG.md  MANIFEST.in  README.md  check_meta.sh  packaging.sh  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/workflows/: publish_release.yml
patest/: __init__.py  __main__.py  cli.py  greet.py
