[metadata]
name = patest
version = attr: patest.__version__
author = Ahzyuan
author_email = hzy_dev@yeah.net
description = Package test
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ahzyuan/Patest
keywords = test
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires = file: requirements.txt 

[options.entry_points]
console_scripts  =
    patest = patest.cli:app

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3
tester =
    pytest==3.3.2
    pytest-sugar
dev =
    pytest-xdist
    %(tester)s


[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*

[isort]
line_length = 120
multi_line_output = 3 
include_trailing_comma = True 
force_grid_wrap = 0
lines_after_imports = 2 
combine_as_imports = True 
default_section = THIRDPARTY
known_first_party = patest
force_alphabetical_sort_within_sections = True
force_separate_standard_library_imports = True
